# astrapdf

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  GITHUB_SETUP.md  GUI_GUIDE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  TESTING.md  install.sh  test_app.sh  test_cli.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: batch.rs  cli.rs  error.rs  export.rs  gui.rs  lib.rs  main.rs  pdf.rs
tests/: batch_tests.rs  export_tests.rs  pdf_tests.rs
